--- a/index.html
+++ b/index.html
@@ -13,13 +13,13 @@
 
 </head>
 <body>
-  <script src=".\src\main.js" ></script>
-  <script src=".\src\ApplicationController.js" ></script>
+  <script src="./src/main.js" ></script>
+  <script src="./src/ApplicationController.js" ></script>
   <script src="./src/RandomTrivia.js"></script>
-  <script src=".\src\Data.js" ></script>
-  <script src=".\src\DataController.js" ></script>
-  <script src=".\src\FavoriteService.js" ></script>
-  <script src=".\src\FavoriteController.js" ></script>
+  <script src="./src/Data.js" ></script>
+  <script src="./src/DataController.js" ></script>
+  <script src="./src/FavoriteService.js" ></script>
+  <script src="./src/FavoriteController.js" ></script>
 
 
   <script>
