--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
 
 </head>
 <body>
-  <script src="./src/main.js" ></script>
+  <script src="./src/Main.js" ></script>
   <script src="./src/ApplicationController.js" ></script>
   <script src="./src/RandomTrivia.js"></script>
   <script src="./src/Data.js" ></script>
