changeing  the info state

--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
   <script src="./src/StartSPA.js" ></script>
   <script src="./src/ApplicationController.js" ></script>
   <script src="./src/RandomTrivia.js"></script>
-  <script src="./src/Data.js" ></script>
+  <script src="./src/Information.js" ></script>
   <script src="./src/DataController.js" ></script>
   <script src="./src/FavoriteService.js" ></script>
   <script src="./src/FavoriteController.js" ></script>
